# Event-managing

./: CMakeLists.txt  README.md  main.cpp
Commands/: command.h  deleteEvent.cpp  deleteEvent.h  newEvent.cpp  newEvent.h  readAllEvents.cpp  readAllEvents.h  updateEvent.cpp  updateEvent.h
Date and time/: Date.cpp  Date.h  Time.cpp  Time.h
Event/: Event.cpp  Event.h
Menu/: Menu.cpp  Menu.h
eventList/: eventList.cpp  eventList.h
